combines all notes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 // .vscode/settings.json
 {
   "typescript.tsdk": "node_modules/typescript/lib",
+  "editor.unusualLineTerminators": "off",
   "editor.formatOnSave": true,
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
