--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "NODE_NO_WARNINGS=1 node --loader ts-node/esm src/index.ts"
+    "dev": "NODE_NO_WARNINGS=1 node --loader ts-node/esm src/index.ts",
+    "create-project": "node --loader ts-node/esm src/scripts/create-quarto-project.ts"
+
   },
   "dependencies": {
     "glob": "^10.3.10",
@@ -17,7 +19,7 @@
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
-    "@types/node": "^20.11.0",
+    "@types/node": "^20.17.16",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
